set up proxy for wmata api to get around cors issues; save api keys to gitignored constants provider

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,9 @@
   "name": "readNRide",
   "app_id": "",
   "v2": true,
-  "typescript": true
+  "typescript": true,
+  "proxies": [{
+    "path": "/wmataApi",
+    "proxyUrl": "https://api.wmata.com"
+  }]
 }
